force-app/main/default/objects/Account/fields/NDIAABNNumber__c.field-meta.xml
<CustomField>
    <fullName>NDIAABNNumber__c</fullName>
    <label>ABN Number</label>
    <type>TextArea</type>
</CustomField>