force-app/main/default/objects/Account/fields/NDIALastName__c.field-meta.xml
<CustomField>
    <fullName>NDIALastName__c</fullName>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>