force-app/main/default/objects/Account/fields/NDIAMiddleName__c.field-meta.xml
<CustomField>
    <fullName>NDIAMiddleName__c</fullName>
    <label>Middle Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>