force-app/main/default/objects/Account/fields/NDIANDISNumber__c.field-meta.xml
<CustomField>
    <fullName>NDIANDISNumber__c</fullName>
    <label>NDIS Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>