force-app/main/default/objects/Account/fields/NDIANDISParticipant__c.field-meta.xml
<CustomField>
    <fullName>NDIANDISParticipant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NDIS Participant</label>
    <type>Checkbox</type>
</CustomField>