force-app/main/default/objects/Account/fields/NDIASuburb__c.field-meta.xml
<CustomField>
    <fullName>NDIASuburb__c</fullName>
    <label>Suburb</label>
    <length>100</length>
    <type>Text</type>
</CustomField>