force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description>This record type will be used to create customer records by the NDIA users</description>
    <label>Customer</label>
</RecordType>