force-app/main/default/objects/Account/validationRules/NDIANDISNumberPopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>NDIANDISNumberPopulated</fullName>
    <active>true</active>
    <description>If NDIS participant is true, customer record must have NDIS number</description>
    <errorConditionFormula>AND( NDIANDISParticipant__c = TRUE, ISBLANK(NDIANDISNumber__c))</errorConditionFormula>
    <errorDisplayField>NDIANDISNumber__c</errorDisplayField>
    <errorMessage>Please provide NDIS Number for NDIS participant</errorMessage>
</ValidationRule>