force-app/main/default/objects/Account/validationRules/NDIAPostal_Code_Not_Greater_Than_4_Dig.validationRule-meta.xml
<ValidationRule>
    <fullName>NDIAPostal_Code_Not_Greater_Than_4_Dig</fullName>
    <active>true</active>
    <description>Billing postal code should not be greater than 4 digits</description>
    <errorConditionFormula>LEN( BillingPostalCode )  &gt; 4</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>Postal Code Should be equal to or less than 4 digits</errorMessage>
</ValidationRule>